--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,33 +1,58 @@
+$colorA: lighten(#39404e, 10%);
 * {
-  background-color: #39404e;
+  background-color: lighten(#39404e, 10%);
 
   color: aliceblue;
 }
 h1 {
   -webkit-text-stroke: 0.1vw rgb(255, 0, 55);
 }
-ul li {
-  list-style-type: none;
-  display: inline;
-  padding: 15px;
-}
 
-.nav {
+.test-container {
   display: flex;
-  justify-content: space-between;
-  text-align: center;
-  max-width: 1260px;
-}
-.logo {
-  margin-top: 3px;
-  margin-left: 45px;
-}
+  justify-content: center;
+  align-items: center;
+  min-height: 90vh;
 
-.test {
-  margin-top: 1rem;
-  font-size: 6rem;
-  text-align: center;
   color: #39404e;
+
+  position: relative;
+  display: flex;
+  flex-direction: column;
+
+  .test {
+    width: 600px;
+    height: 200px;
+    border-radius: 9px;
+    margin: 30px 0;
+    background: lighten($colorA, 2%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 6rem;
+
+    box-shadow: -30px 40px 20px rgba(0, 0, 0, 0.3);
+  }
+}
+.next {
+  width: 600px;
+  height: 200px;
+  border-radius: 9px;
+  margin: 30px 0;
+  background: $colorA;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 6rem;
+  transition: box-shadow 900ms;
+
+  &:hover {
+    background-color: lighten($colorA, 1%);
+    transition: box-shadow 500ms;
+    box-shadow: -15px 15px 15px rgba(0, 0, 0, 0.1),
+      15px 15px 15px 0 rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+  }
 }
 a {
   text-decoration: none;
