--- a/frontend/src/components/base.scss
+++ b/frontend/src/components/base.scss
@@ -72,13 +72,14 @@ $Navcolor: black; // green; //rgb(165, 82, 96); //crimson;
     height: 50px;
     outline: none;
     border: none;
-    //border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     background: lighten($Navcolor, 15%);
     color: white;
     text-shadow: 0 0 10px $Navcolor;
     padding: 0 80px 0 20px;
     border-radius: 30px;
-    box-shadow: 0 0 25px 0 $Navcolor, 0 20px 25px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 25px 0 /* $Navcolor */ crimson,
+      0 20px 25px 0 rgba(0, 0, 0, 0.2);
     // box-shadow: inset 0 0 25px 0 rgba(0, 0, 0, 0.5);
     transition: all 1s;
     opacity: 0;
