--- a/frontend/src/components/base.scss
+++ b/frontend/src/components/base.scss
@@ -128,6 +128,8 @@ $Navcolor: black; // green; //rgb(165, 82, 96); //crimson;
   //border-radius: 9px;
 
   &:hover {
+    //border-radius: 9px;
+
     background-color: lighten(black, 15%);
   }
 }
