homepage for presentation

--- a/frontend/src/pages/pages.scss
+++ b/frontend/src/pages/pages.scss
@@ -1,1 +1,87 @@
-//sth
+/* * {
+  box-sizing: boarder-box;
+  padding: 0;
+  margin: 0;
+  scroll-behavior: smooth;
+} */
+///////////////////////
+$list-bg: rgb(70, 26, 26);
+
+////////////////
+.homebox {
+  // margin-left: 2.5rem;
+  .like {
+    //display: flex;
+    background-color: $list-bg;
+    .like-icon {
+      background-color: $list-bg;
+    }
+    &:hover {
+      transform: scale(1.2) rotate(-50deg);
+    }
+    border: none;
+    position: relative;
+    margin-top: 4rem;
+    margin-left: 8rem;
+  }
+  li {
+    padding: 15px 15px;
+    background-color: $list-bg;
+    height: 15rem;
+    width: 28%;
+    border-radius: 9px;
+    padding: 9rem;
+    margin: 2%;
+    cursor: pointer;
+    transition: box-shadow 500ms;
+    transition: transform 500ms ease;
+    box-shadow: -15px 15px 2px rgba(0, 0, 0, 0.1),
+      15px 2px 15px 0 rgba(0, 0, 0, 0.1);
+    &:hover {
+      //background-color: lighten($list-bg, 10%);
+      transition: box-shadow 500ms;
+      border: 1px solid crimson;
+      box-shadow: -30px 30px 20px rgba(0, 0, 0, 0.3);
+      //zoom
+      -ms-transform: scale(1.25); // IE 9
+      -webkit-transform: scale(1.5); // Safari 3-8
+      transform: scale(1.1);
+      transition: transform 500ms ease;
+    }
+  }
+  ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style-type: none;
+  }
+  // This is for the home page test
+  /* ul li {
+    list-style-type: none;
+    display: inline-block;
+
+    background-color: rgb(10, 10, 12);
+    height: 15rem;
+    width: 28%;
+
+    border-radius: 9px;
+    padding: 150px;
+    margin: 2%;
+    cursor: pointer;
+    transition: box-shadow 500ms;
+    transition: transform 500ms ease;
+    box-shadow: -15px 15px 15px rgba(0, 0, 0, 0.1),
+      15px 15px 15px 0 rgba(0, 0, 0, 0.1);
+
+    &:hover {
+      background-color: lighten(black, 10%);
+      transition: box-shadow 500ms;
+      border: 1px solid white;
+      box-shadow: -30px 40px 20px rgba(0, 0, 0, 0.3);
+      //zoom
+      -ms-transform: scale(1.25); // IE 9
+      -webkit-transform: scale(1.5); // Safari 3-8
+      transform: scale(1.1);
+      transition: transform 500ms ease;
+    }
+  } */
+}
