--- a/frontend/src/style/signup.scss
+++ b/frontend/src/style/signup.scss
@@ -1,8 +1,8 @@
-.header{
-    padding: 20px;
-    font-size: 30px;
+.header {
+  // padding: 20px;
+  font-size: 30px;
 }
 
-.page-manager{
-    padding: 20px;
-}
+/* .page-manager {
+  padding: 20px;
+} */
