--- a/frontend/src/components/base.scss
+++ b/frontend/src/components/base.scss
@@ -78,7 +78,7 @@ $Navcolor: black; // green; //rgb(165, 82, 96); //crimson;
     text-shadow: 0 0 10px $Navcolor;
     padding: 0 80px 0 20px;
     border-radius: 30px;
-    box-shadow: 0 0 25px 0 rgb(20, 220, 37), 0 20px 25px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 25px 0 crimson, 0 20px 25px 0 rgba(0, 0, 0, 0.2);
     // box-shadow: inset 0 0 25px 0 rgba(0, 0, 0, 0.5);
     transition: all 1s;
     opacity: 0;
@@ -169,4 +169,10 @@ $Navcolor: black; // green; //rgb(165, 82, 96); //crimson;
       transform: translateY(0);
     }
   }
+}
+.account {
+  border: none;
+}
+.footer_make {
+  background-color: black;
 }
