--- a/frontend/src/style/signup.scss
+++ b/frontend/src/style/signup.scss
@@ -6,3 +6,21 @@
 /* .page-manager {
   padding: 20px;
 } */
+.line {
+  border-radius: 19px;
+}
+.btn_createacc {
+  border-radius: 13px;
+  background-color: #fe4066; //lighten(crimson, 10%);
+  transition: box-shadow 2s;
+
+  &:hover {
+    transition: box-shadow 700ms;
+    box-shadow: 0 0 25px 0 crimson, 0 20px 25px 0 rgba(0, 0, 0, 0.2);
+
+    background-color: crimson;
+  }
+  &:active {
+    background-color: crimson;
+  }
+}
