--- a/frontend/src/style/account.scss
+++ b/frontend/src/style/account.scss
@@ -1,12 +1,18 @@
 .header {
-    padding: 20px;
+  padding: 20px;
 }
 
-.page-manager{
-    padding: 20px;
-    width: 25%;
+.page-manager {
+  padding: 20px;
+  width: 25%;
 }
 
-.page-manager-curr-info{
-    padding: 20px;
+.page-manager-curr-info {
+  padding: 20px;
 }
+
+/* .acc_bar {
+  border-radius: 9px;
+  background-color: turquoise;
+  color: green;
+} */
