--- a/frontend/src/style/signup.scss
+++ b/frontend/src/style/signup.scss
@@ -1,6 +1,7 @@
 .header {
   // padding: 20px;
   font-size: 30px;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 /* .page-manager {
@@ -8,6 +9,9 @@
 } */
 .line {
   border-radius: 19px;
+  /* background-color: #201818;
+
+  opacity: 0.5; */
 }
 .btn_createacc {
   border-radius: 13px;
