--- a/frontend/src/style/talk.scss
+++ b/frontend/src/style/talk.scss
@@ -1,4 +1,7 @@
-.page-manager{
-    padding: 20px;
-    width: 100%;
+.page-manager {
+  padding: 20px;
+  width: 100%;
+}
+.backside {
+  background-color: lighten(#39404e, 15%);
 }
