--- a/frontend/src/components/base.scss
+++ b/frontend/src/components/base.scss
@@ -1,6 +1,7 @@
 $Navcolor: black; // green; //rgb(165, 82, 96); //crimson;
-* {
-  background-color: lighten(#39404e, 10%);
+
+body {
+  background-color: lighten(#39404e, 10%); //rgb(221, 217, 217);
   color: aliceblue;
 }
 .container {
@@ -135,6 +136,8 @@ $Navcolor: black; // green; //rgb(165, 82, 96); //crimson;
 }
 .icon {
   background-color: black;
+  color: aliceblue; ////////////////////////////
+
   &:active {
     transform: scale(1.2);
   }
