--- a/frontend/src/style/signup.scss
+++ b/frontend/src/style/signup.scss
@@ -1,7 +1,7 @@
 .header {
   // padding: 20px;
   font-size: 30px;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family: Verdana, sans-serif;
 }
 
 /* .page-manager {
