--- a/frontend/src/style/account.scss
+++ b/frontend/src/style/account.scss
@@ -16,3 +16,18 @@
   background-color: turquoise;
   color: green;
 } */
+.btn_acc {
+  border-radius: 9px;
+  background-color: #fe4066; //lighten(crimson, 10%);
+  transition: box-shadow 2s;
+
+  &:hover {
+    transition: box-shadow 700ms;
+    box-shadow: 0 0 25px 0 crimson, 0 20px 25px 0 rgba(0, 0, 0, 0.2);
+
+    background-color: crimson;
+  }
+  &:active {
+    background-color: crimson;
+  }
+}
