added login and added few items

--- a/frontend/src/pages/pages.scss
+++ b/frontend/src/pages/pages.scss
@@ -48,3 +48,6 @@ $list-bg: lighten(rgb(8, 7, 7), 22%); // change the color of the list
     border-radius: 9px;
   }
 }
+.login-design {
+  color: black;
+}
