--- a/frontend/src/style/account.scss
+++ b/frontend/src/style/account.scss
@@ -1,3 +1,5 @@
+$list-bg: lighten(rgb(8, 7, 7), 22%); // change the color of the list
+
 .header {
   padding: 20px;
 }
@@ -25,5 +27,42 @@
   }
   &:active {
     background-color: #fe4066;
+  }
+}
+
+.home-card-box {
+  background-color: $list-bg;
+  border-radius: 9px;
+  margin-top: 2%;
+  margin-bottom: 2%;
+
+  cursor: pointer;
+  transition: box-shadow 500ms;
+  transition: transform 500ms ease;
+  box-shadow: -9px 9px 12px rgba(0, 0, 0, 0.7),
+    15px 2px 15px 0 rgba(0, 0, 0, 0.1);
+  &:hover {
+    transition: box-shadow 500ms;
+    border: 1px solid crimson;
+    box-shadow: -30px 30px 20px rgba(0, 0, 0, 0.3);
+    //zoom effect
+    -ms-transform: scale(0.98); // IE 9
+    -webkit-transform: scale(1.5); // Safari 3-8
+    transform: scale(1.02);
+    transition: transform 500ms ease;
+  }
+
+  .star {
+    border: none;
+    //  background-color: $list-bg;
+    .star-icon {
+      background-color: $list-bg;
+    }
+    &:hover {
+      transform: scale(1.2);
+    }
+    &:active {
+      transform: scale(1.2) rotate(50deg);
+    }
   }
 }
