--- a/frontend/src/components/base.scss
+++ b/frontend/src/components/base.scss
@@ -139,6 +139,9 @@ body {
   &:active {
     transform: scale(1.2);
   }
+  &:hover {
+    color: crimson;
+  }
 }
 .your-acc-icon {
   background-color: white;
