--- a/frontend/src/style/talk.scss
+++ b/frontend/src/style/talk.scss
@@ -7,15 +7,33 @@
 
 .backside {
   background-color: lighten(#39404e, 15%);
+  border-radius: 9px;
   width: 100%;
   margin: 5px;
+  border: 2px solid crimson;
+  &:hover {
+    transition: box-shadow 500ms;
+
+    box-shadow: -30px 30px 20px rgba(0, 0, 0, 0.3);
+  }
 }
 
-.btn-text{
+.btn-text {
   color: white;
   font-size: 20px;
 }
 
-.create-thread-btn{
-  
+.create-thread-btn {
+}
+.plus {
+  //plus  button
+  color: white;
+  background-color: lighten(crimson, 20%);
+  border-radius: 33px;
+  &:hover {
+    color: purple;
+  }
+  &:active {
+    transform: scale(1.2);
+  }
 }
