--- a/frontend/src/components/base.scss
+++ b/frontend/src/components/base.scss
@@ -5,9 +5,9 @@ body {
   //color: aliceblue;
   background: url("../images/BCK_Light.png");
 }
-.light-mode{
+//.light-mode{
   
-}
+//}
 .dark-mode{
   background: url("../images/BCK_Dark.png");
 }
