--- a/frontend/src/style/talk.scss
+++ b/frontend/src/style/talk.scss
@@ -5,19 +5,18 @@
   //left: 50%;
 }
 
-.toast{
+.toast {
   width: 300%;
 }
 
-.backside {
-  background-color: lighten(#39404e, 15%);
+.thread {
   border-radius: 9px;
-  width: 100%;
+  //width: 100%;
+  //max-width: 180%;
   margin: 5px;
   border: 2px solid lighten(crimson, 20%);
   &:hover {
     transition: box-shadow 500ms;
-
     box-shadow: -30px 30px 20px rgba(0, 0, 0, 0.3);
   }
 }
@@ -27,8 +26,6 @@
   font-size: 20px;
 }
 
-.create-thread-btn {
-}
 .plus {
   //plus button
   color: white;
