Added some spice to the thread page

--- a/frontend/src/style/talk.scss
+++ b/frontend/src/style/talk.scss
@@ -32,3 +32,15 @@
   width: 50%;
   margin: auto;
 }
+
+.like-btn{
+  &:active{
+    fill: green;
+  }
+}
+
+.dislike-btn{
+  &:active{
+    fill: red;
+  }
+}
