--- a/frontend/src/components/pages.scss
+++ b/frontend/src/components/pages.scss
@@ -5,7 +5,7 @@ $list-bg: lighten(rgb(8, 7, 7), 22%); // change the color of the list
   border-radius: 9px;
   margin-top: 2%;
   margin-bottom: 2%;
-
+  
   cursor: pointer;
   transition: box-shadow 500ms;
   transition: transform 500ms ease;
@@ -18,9 +18,11 @@ $list-bg: lighten(rgb(8, 7, 7), 22%); // change the color of the list
     //zoom effect
     -ms-transform: scale(0.92); // IE 9
     -webkit-transform: scale(1.5); // Safari 3-8
-    transform: scale(1.02);
+    transform: scale(1.05);
     transition: transform 500ms ease;
+    z-index: 1;
   }
+
   /* &:first-child:hover {
     margin: 0 30px;
   } */
@@ -39,6 +41,13 @@ $list-bg: lighten(rgb(8, 7, 7), 22%); // change the color of the list
     }
   }
 }
+
+.home-card-box-video-image{
+  &:hover {
+    opacity: 0.3;
+  }
+}
+
 .star-btn {
   &:focus {
     box-shadow: none;
