--- a/frontend/src/components/pages.scss
+++ b/frontend/src/components/pages.scss
@@ -6,6 +6,7 @@ $list-bg: lighten(rgb(8, 7, 7), 22%); // change the color of the list
   margin-top: 2%;
   margin-bottom: 2%;
   
+  color: black;
   cursor: pointer;
   transition: box-shadow 500ms;
   transition: transform 500ms ease;
