--- a/frontend/src/components/base.scss
+++ b/frontend/src/components/base.scss
@@ -1,4 +1,12 @@
 $Navcolor: black; // green; //rgb(165, 82, 96); //crimson;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
+}
 
 body {
   //background-color: lighten(#39404e, 10%); //rgb(221, 217, 217);
@@ -196,6 +204,7 @@ body {
   @media (min-width: 992px) {
     border-bottom: 3px solid red;
     margin-bottom: -16px;
+    color: crimson;
   }
 }
 .active-right {
