--- a/frontend/src/components/base.scss
+++ b/frontend/src/components/base.scss
@@ -11,7 +11,10 @@ body {
 body {
   //background-color: lighten(#39404e, 10%); //rgb(221, 217, 217);
   //color: aliceblue;
-  background: url("../images/BCK_Light.png");
+
+  //background: url("../images/BCK_Light.png");
+
+  background: white;
 }
 //.light-mode{
 
