--- a/frontend/src/components/video.scss
+++ b/frontend/src/components/video.scss
@@ -23,6 +23,8 @@
     margin-left: 19%;
     background-color: transparent;
     padding-top: 30px;
+    padding-bottom: 0px;
+    width: 1252px;
 }
 
 .jumbotron-video{
@@ -31,11 +33,38 @@
 }
 
 .jumbotron-header{
+    h2{
+        margin-bottom: 4px;
+    }
+    h5{
+        color: black;
+    }
+}
 
+.videoList{
+    width: 80%;
+    border-color: black;
+    border: black;
+    border-radius: 3%;
+}
+
+.voteIcon{
+    color: 'gold';
+    size: 1.25em;
+    fill: gold;
+}
+
+.numVotes{
+    display: inline;
+    h2{
+        display: inline;
+    }
 }
 
 .videoItem{
-    padding: 24px;
+    padding-left: 48px;
+    padding-top: 24px;
+    padding-bottom: 24px;
     width: 100%;
     height: 230px;
 }
@@ -44,6 +73,7 @@
     border: black;
     border-radius: 4px;
     float: left;
+    margin-right: 30px;
 
     &:hover{
         cursor: pointer;
@@ -59,4 +89,8 @@
 .videoItemContent{
     margin-left: 19%;
     padding: 4px;
+}
+
+.videoItemDescription{
+    width: 66%;
 }
