Reply 1.1 (Reply expandable fixed)

--- a/frontend/src/components/comment/comment.scss
+++ b/frontend/src/components/comment/comment.scss
@@ -18,8 +18,10 @@
   }
 }
 .reply {
+  cursor: pointer;
   color: darken(white, 29%);
   font-weight: 700;
+  margin-right: 9rem;
   &:hover {
     color: rgb(23, 64, 199);
   }
