--- a/frontend/src/style/talk.scss
+++ b/frontend/src/style/talk.scss
@@ -41,6 +41,9 @@
   &:active {
     fill: green;
   }
+  &:focus {
+    box-shadow: none;
+  }
 }
 
 .dislike-btn {
@@ -48,6 +51,9 @@
 
   &:active {
     fill: red;
+  }
+  &:focus {
+    box-shadow: none;
   }
 }
 .top-text {
