--- a/frontend/src/components/base.scss
+++ b/frontend/src/components/base.scss
@@ -14,7 +14,8 @@ body {
   margin: 0px;
   padding: 0px;
   overflow-x: hidden;
-  background: $cust-lt-red; //$cust-white
+  background: $cust-white;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .dark-mode {
